Fixes & Emoji Additions

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 </head>
 
-<body class="greengrd">
+<body class="greygrd">
 
 
   <!-- Preloader
@@ -77,16 +77,6 @@
  <!-- Header
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="masthead headerborder">
-
-    <div class="valign">
-        <div class="container-fluid">
-            <div class="row">
-                <a href="index.html" class="text-left menupad">eat me</a>
-                <a href="more.html" class="text-center menupad">add me</a>
-                <a href="about.html" class="text-right menupad">read me</a>
-            </div>   
-        </div>
-    </div>
   </header>
 
 
@@ -147,7 +137,7 @@
 <section>
   <div class="projectpage">          
     <div class="newborder container">
-      <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter">
+      <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter font3">
 
 
 <!-- TEXT : works-item -->
@@ -198,7 +188,8 @@
   <!-- FOOTER
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <footer class="mastfoot footerborder">
- 
+    <div class="valign">
+        <div class="container-fluid container-footer"> 
                    <!--FILTERS -->
         <section id="works-filter-panel" class="works-filter-panel">
           <div class="valign">
@@ -207,17 +198,10 @@
 
                         <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
 
-                        <li><a href="#" data-filter=".product"><span>Product</span></a></li>
-                        <!--GREEN -->
-
-                        <li><a href="#" data-filter=".ui"><span>Interface</span></a></li>
-                        <!--BLUE -->
-
-                        <li><a href="#" data-filter=".space"><span>Space</span></a></li>
-                        <!--RED -->
-
-                        <li><a href="#" data-filter=".service"><span>Service</span></a></li>
-                        <!--ORANGE -->
+                        <li><a href="#" data-filter=".beans"><span>beans</span></a></li>
+                        <li><a href="#" data-filter=".greens"><span>greens</span></a></li>
+                        <li><a href="#" data-filter=".fish"><span>fish</span></a></li>
+                        <li><a href="#" data-filter=".classics"><span>classics</span></a></li>
 
                     </ul>
                 </div>
@@ -225,11 +209,15 @@
         </section> 
         <!-- -->
 
-    <div class="valign">
-        <div class="container-fluid">
-            <div class="row">
-                <h2 class="text-center">spurge eats</h2>
-            </div>    
+            <div class="row menurules">
+                <a href="index.html" class="text-left menupad menuimg grow"><img src="images/plate.png"></a>
+                <a href="more.html" class="text-center menupad menuimg grow"><img src="images/notebook.png"></a>
+                <a href="about.html" class="text-right menupad menuimg grow"><img src="images/thought.png"></a>
+            </div>                
+            <div class="row text-center">
+                <a href="index.html" class="font3 menutitle">spurge eats</a>
+            </div>
+  
         </div>
     </div>
 
