--- a/recipe-x.html
+++ b/recipe-x.html
@@ -150,23 +150,10 @@
       <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter">
 
 
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-full-width ">
-                      <img data-no-retina alt="lake n bus stop design main" title="" class="b-lazy img-responsive" src="images/work/store/store1.png"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store1.png">
-                        <div class="ContentB">
-                          </div>
-                      </a>
-
-              </div>
-<!-- end : works-item -->
-
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
-                    <article class="text-center worktext">
-                          <h2 class="font1 bigletters add-bottom-eighth">DIAL UP Store</h2>
-                          <h4 class="font2">Web Design & Development</h4><br/>
-                          <h4 class="font1">2018</h4>
+                    <article class="text-center bigletters">
+                          <h1>Spurge's Classic Beans</h1>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -177,27 +164,6 @@
                         <article class="text-left  worktext">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Adipiscing tristique risus nec feugiat in. Habitant morbi tristique senectus et netus. Lacinia quis vel eros donec ac odio. Purus ut faucibus pulvinar elementum integer enim neque. Tortor condimentum lacinia quis vel eros donec ac odio. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. <a href="http://www.dialupstuff.com/blah" target="_blank">Visit the store.</a> Fames ac turpis egestas integer eget aliquet nibh. Non enim praesent elementum facilisis leo. Volutpat blandit aliquam etiam erat. Ac tortor dignissim convallis aenean et tortor.</p>
                     </article>
-              </div>
-<!-- end : works-item -->
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
-                      <img data-no-retina alt="lake n bus stop design main 2" title="" class="b-lazy img-responsive" src="images/work/store/store2.png"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store2.png">
-                        <div class="ContentB">
-                          </div>
-                      </a>                      
-              </div>
-<!-- end : works-item -->
-
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-full-width ">
-                      <img data-no-retina alt="lake n bus stop design notes" title="" class="b-lazy img-responsive" src="images/work/store/store3.png"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store3.png">
-                        <div class="ContentB">
-                          </div>
-                      </a>
               </div>
 <!-- end : works-item -->
 
@@ -214,32 +180,12 @@
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
-              <article class="text-center bigletters">
-              <h1>"It is a poem in glass and marble which symbolizes...that we shall indeed overcome."</h1>
+              <article class="text-center medletters">
+              <h1>To begin...</h1>
             </article>
               </div>
 <!-- end : works-item -->
 
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-full-width ">
-                      <img data-no-retina alt="lake n bus stop design moodboard" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/jack.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/jack.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-full-width ">
-                      <img data-no-retina alt="lake n bus stop design moodboard 2" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/teah.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/teah.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
@@ -259,16 +205,6 @@
               </div>
 <!-- end : works-item -->
 
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-full-width ">
-                      <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/aj.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/aj.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                         <article class="text-left  worktext">
@@ -277,36 +213,15 @@
               </div>
 <!-- end : works-item -->
 
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-full-width ">
-                      <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/pinktee.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/pinktee.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                     <article class="text-center seealso imgborder">
                           <h2 class="font1 bigletters"><a href="work.html">you might like: spurge's beans</a></h2><br/>
-                          <h4 class="font2">A music video</h4>
+                          <h4 class="font2">Reliable & good</h4>
                     </article>
               </div>
 <!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
-                    <article class="text-center seealso imgborder">
-                          <h2 class="font1 bigletters"><a href="work.html">you might like: oven chicken</a></h2><br/>
-                          <h4 class="font2">An environment</h4>
-                    </article>
-              </div>
-<!-- end : works-item -->
-
-
 
 
               </section>
