--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
  <!-- Header
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="masthead headerborder">
+
+        <div class="valign">
+        <div class="container-fluid"> 
+            <div class="row menurules">
+                <a href="index.html" class="text-left menupad menuimg grow"><img src="images/plate.png"></a>
+                <a href="more.html" class="text-center menupad menuimg grow"><img src="images/notebook.png"></a>
+                <a href="about.html" class="text-right menupad menuimg grow"><img src="images/thought.png"></a>
+            </div>                
+        </div>
+    </div>
+
   </header>
 
 
@@ -194,7 +205,7 @@
         <section id="works-filter-panel" class="works-filter-panel">
           <div class="valign">
                 <div class="works-filter-wrap">
-                    <ul class="works-filter text-center clearfix font2">
+                    <ul class="works-filter text-center clearfix font1">
 
                         <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
 
@@ -208,12 +219,7 @@
           </div>
         </section> 
         <!-- -->
-
-            <div class="row menurules">
-                <a href="index.html" class="text-left menupad menuimg grow"><img src="images/plate.png"></a>
-                <a href="more.html" class="text-center menupad menuimg grow"><img src="images/notebook.png"></a>
-                <a href="about.html" class="text-right menupad menuimg grow"><img src="images/thought.png"></a>
-            </div>                
+               
             <div class="row text-center">
                 <a href="index.html" class="font3 menutitle">spurge eats</a>
             </div>
