more fixes layout

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="valign">
         <div class="container-fluid"> 
-            <div class="row menurules">
+            <div class="row menurules pad-top-half">
                 <a href="index.html" class="text-left menupad menuimg grow"><img src="images/plate.png"></a>
                 <a href="more.html" class="text-center menupad menuimg grow"><img src="images/notebook.png"></a>
                 <a href="about.html" class="text-right menupad menuimg grow"><img src="images/thought.png"></a>
