--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="valign">
         <div class="container-fluid"> 
-            <div class="row menurules pad-top-half">
+            <div class="row menurules pad-top">
                 <a href="index.html" class="text-left menupad menuimg grow"><img src="images/plate.png"></a>
                 <a href="more.html" class="text-center menupad menuimg grow"><img src="images/notebook.png"></a>
                 <a href="about.html" class="text-right menupad menuimg grow"><img src="images/thought.png"></a>
@@ -148,7 +148,7 @@
 <section>
   <div class="projectpage">          
     <div class="newborder container">
-      <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter font3">
+      <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top font3">
 
 
 <!-- TEXT : works-item -->
