Arena API - Thank you Sehmon!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/sexypasta.png.png" />
+  <link rel="icon" type="image/png" href="images/sexypasta.png" />
 
 
    <!-- FONT
@@ -52,7 +52,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– --> 
 <link rel="stylesheet/less" type="text/css" href="less/color.less">
   <link rel="stylesheet/less" type="text/css" href="less/fonts.less">
-<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js"></script>
 
 
   <!-- MODERNIZR
@@ -152,7 +152,7 @@
 
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half">
+              <div class="works-item chrome-fix works-item-one-half beans classics">
                     <article class="text-center worktext">
                           <a href="recipe-x.html" onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')">spinach-ricotta ravioli</a>
                     </article>                    
