--- a/more.html
+++ b/more.html
@@ -64,7 +64,7 @@
 
 </head>
 
-<body class="greengrd marbletexture">
+<body class="marbletexture">
 
 
   <!-- Preloader
@@ -115,7 +115,7 @@
 <!-- MASTER CONTENT
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-<section class="container pad-intro pad-bottom">
+<section class="container pad-bottom">
 
   <section>
   <div class="projectpage">          
@@ -176,12 +176,12 @@
           for(i = 0; i < arr.contents.length; i++) {
             if (arr.contents[i].image){
               if(arr.contents[i].attachment) {
-                out += '<div class="works-item chrome-fix works-item-one-half text-center"><a href=' + arr.contents[i].attachment.url + '><img class="b-lazy img-responsive imgshadow b-error" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
+                out += '<div class="works-item chrome-fix works-item-one-half text-center"><a target="_blank" href=' + arr.contents[i].attachment.url + '><img class="b-lazy img-responsive imgshadow b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
               }
               else if(arr.contents[i].source) {
-                out += '<div class="works-item chrome-fix works-item-one-half text-center b-lazy img-responsive imgshadow b-error"><a href=' + arr.contents[i].source.url + '><img class="b-lazy img-responsive imgshadow b-error" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
+                out += '<div class="works-item chrome-fix works-item-one-half text-center"><a target="_blank" href=' + arr.contents[i].source.url + '><img class="b-lazy img-responsive imgshadow b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
               } else {
-                out += '<div class="works-item chrome-fix works-item-one-half text-center b-lazy img-responsive imgshadow b-error"><a href=' + arr.contents[i].image.original.url + '><img class="b-lazy img-responsive imgshadow b-error" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
+                out += '<div class="works-item chrome-fix works-item-one-half text-center"><a target="_blank" href=' + arr.contents[i].image.original.url + '><img class="b-lazy img-responsive imgshadow b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
               }
             }
           }
