Mini fixes..still API issues

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half beans classics">
                     <article class="text-center worktext">
-                          <a href="recipe-x.html" onmouseover="showElement('bloom')" onmouseout="hideElement('cuttingmat')">spinach-ricotta ravioli</a>
+                          <a href="recipe-x.html" onmouseover="showElement('bloom')" onmouseout="hideElement('bloom')">spinach-ricotta ravioli</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
