--- a/recipe-x.html
+++ b/recipe-x.html
@@ -88,23 +88,6 @@
         </div>
     </div>
 
-                   <!--FILTERS -->
-        <section id="works-filter-panel" class="works-filter-panel">
-          <div class="valign">
-                <div class="works-filter-wrap">
-                    <ul class="works-filter text-center clearfix font2">
-
-                        <li><a id="all" href="#" data-filter="*" class="active"><span>all</span></a></li>
-                        <li><a href="#" data-filter=".beans"><span>beans</span></a></li>
-                        <li><a href="#" data-filter=".greens"><span>greens</span></a></li>
-                        <li><a href="#" data-filter=".fish"><span>fish</span></a></li>
-                        <li><a href="#" data-filter=".meat"><span>meat</span></a></li>
-
-                    </ul>
-                </div>
-          </div>
-        </section> 
-        <!-- -->
 
   </header>
 
@@ -166,7 +149,7 @@
 <section>
   <div class="">          
     <div class="newborder container">
-      <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter">
+      <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top pad-bottom">
 
 
 <!-- TEXT : works-item -->
@@ -236,8 +219,8 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                     <article class="text-center seealso imgborder">
-                          <h2 class="font1 bigletters"><a href="work.html">you might like: spurge's beans</a></h2><br/>
-                          <h4 class="font2">Reliable & good</h4>
+                          <h2 class="font3"><a href="work.html">you might like: spurge's beans</a></h2><br/>
+                          <h4 class="font2">reliable, good</h4>
                     </article>
               </div>
 <!-- end : works-item -->
