--- a/about.html
+++ b/about.html
@@ -137,7 +137,12 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                         <article class="text-left  worktext">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore <span onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')" class="underline">magna aliqua</span>. Sem et tortor consequat id porta nibh venenatis. Adipiscing tristique risus nec feugiat in. Habitant morbi tristique senectus et netus. Lacinia quis vel eros donec ac odio. Purus ut faucibus pulvinar elementum integer enim neque. Tortor condimentum lacinia quis vel eros donec ac odio. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. <a href="http://www.dialupstuff.com/blah" target="_blank">Visit the store.</a> Fames ac turpis egestas integer eget aliquet nibh. Non enim praesent elementum facilisis leo. Volutpat blandit aliquam etiam erat. Ac tortor dignissim convallis aenean et tortor.</p>
+                          <p>Spurge Eats was conceived on a late night after enjoying another plate of Spurge’s (very delicious) beans and rice. “Could there be more?” I asked. “How might this chef’s talent be seen by more beans, more brussel sprouts, and more garlicky dishes?” Hence, this website was born. </p> <br>
+
+                          <p>On the homepage sits a growing, adaptive list of recipes that Spurge might find inspiring. Anyone can contribute, including Spurge himself, by linking URLs, images, or PDFs to the matching <a href="https://www.are.na/t/spurge-eats-jnifkowqqxy" target="_blank">Are.na</a> board. Next lies the notebook, where some of Spurge’s best personal recipes & foods we have enjoyed together are detailed. Finally, this description page offers a reminder of how it all came to be.</p> <br>
+
+                          <p>Cheers!</p> <br>
+                          <p>- T</p>
                     </article>
               </div>
 <!-- end : works-item -->
